pretrained index_to_filename

--- a/HGNN/train/ConfigParserWriter-GridExperiments.ipynb
+++ b/HGNN/train/ConfigParserWriter-GridExperiments.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimentName = \"FreezeVsTune224\"\n",
+    "experimentName = \"differetnRes\"\n",
     "\n",
     "\n",
     "# When adding a new parameter:\n",
@@ -48,7 +48,7 @@
     "    \"validation_count\":0.16,\n",
     "\n",
     "    # training\n",
-    "    \"batchSize\": 128, # Bigger is more stable\n",
+    "    \"batchSize\": 64, # Bigger is more stable\n",
     "    \"n_epochs\":5000, # allow it to run for long time 4000\n",
     "    \"learning_rate\":0.001, # Seems 0.0001 to be best value with Adam. 0.1 best for SGD\n",
     "    \"numOfTrials\":5,\n",
@@ -63,10 +63,12 @@
     "    \"augmented\": True,\n",
     "    \"weight_decay\": 0.0001,\n",
     "\n",
-    "    \"img_res\": 224,\n",
+    "    \"img_res\": 448,\n",
     "    \"tl_freeze\": True,\n",
     "    \"cnn_layers\":0,\n",
     "    \"cnn_channels\":128,\n",
+    "    \n",
+    "    \"pretrained\": True\n",
     "}\n",
     "\n",
     "experimentsPath=\"/home/elhamod/HGNN/experiments/\"\n",
@@ -88,7 +90,7 @@
     {
      "data": {
       "text/plain": [
-       "'/home/elhamod/HGNN/experiments/FreezeVsTune224/params.json'"
+       "'/home/elhamod/HGNN/experiments/differetnRes/params.json'"
       ]
      },
      "execution_count": 3,
@@ -100,7 +102,7 @@
     "cp = ConfigParser(experimentsPath, dataPath, experimentName)\n",
     "\n",
     "hyperp_params = {\n",
-    "    \"tl_freeze\":[False, True]\n",
+    "    \"img_res\":[224, 448, 896]\n",
     "#     \"dummy\":[0]\n",
     "#     \"fc_layers\":[1,2,3],\n",
     "    \n",
@@ -130,10 +132,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 5, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 224, 'tl_freeze': False, 'cnn_layers': 0, 'cnn_channels': 128}\n",
-      "models/572d10764b2088ad577511b4c5f1d5d1c97d627fb917df0a3da5ab66\n",
-      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 5, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 224, 'tl_freeze': True, 'cnn_layers': 0, 'cnn_channels': 128}\n",
-      "models/809ad0535a32bedd38668c34c36f069f943fc73a097a534e6a3ae475\n"
+      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 64, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 5, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 224, 'tl_freeze': True, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True}\n",
+      "models/754165dd61cd98f0a13a94b2b961168d7af952a89e2817c28cd67156\n",
+      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 64, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 5, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': True, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True}\n",
+      "models/5dc8a5a13ac397af20c7f51ad8df9fb52e21718645de773a9b30ef12\n",
+      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 64, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 5, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 896, 'tl_freeze': True, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True}\n",
+      "models/0fba78bbf65d7c025b1ea1a645a9a0d5f2f4a1a6de341c6721258a86\n"
      ]
     }
    ],
@@ -142,13 +146,6 @@
     "    print(i)\n",
     "    print(getModelName(i))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
