--- a/HGNN/train/ConfigParserWriter-SelectExperiments.ipynb
+++ b/HGNN/train/ConfigParserWriter-SelectExperiments.ipynb
@@ -29,30 +29,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimentName = \"/home/elhamod/melhamodenv3/BGNN/testingNewConfigFile2\"\n",
+    "experimentName = \"Pretrain_Freeze\"\n",
     "\n",
+    "\n",
+    "# When adding a new parameter:\n",
+    "# 1- Add it here\n",
+    "# 2- Add it to configParser where necessary\n",
+    "# 3- Run fix parameters jupyter notebook if necessary\n",
+    "\n",
+    "# Do not change the order!\n",
     "params = {\n",
     "    # Do not change for multi/hyperp experiments\n",
     "    \"image_path\": \"INHS_cropped\", # \"/data/BGNN_data/CIFAR\", # \"/data/BGNN_data/INHS_cropped\",\n",
-    "    \"suffix\":'11', #  #'11', '53', None # used to get a subset cleaned_metadata file. set to None otherwise to use full metadata\n",
+    "    \"suffix\":'52', #  #'11', '52', None # used to get a subset cleaned_metadata file. set to None otherwise to use full metadata\n",
     "    \n",
     "    # dataset\n",
     "    \"training_count\":0.64,\n",
     "    \"validation_count\":0.16,\n",
     "\n",
     "    # training\n",
-    "    \"batchSize\": 32, # Bigger is more stable\n",
+    "    \"batchSize\": 128, # Bigger is more stable\n",
     "    \"n_epochs\":5000, # allow it to run for long time 4000\n",
-    "    \"learning_rate\":0.01, # Seems 0.0001 to be best value with Adam. 0.1 best for SGD\n",
-    "    \"numOfTrials\":3,\n",
-    "    \"patience\": 100,\n",
+    "    \"learning_rate\":0.001, # Seems 0.0001 to be best value with Adam. 0.1 best for SGD\n",
+    "    \"numOfTrials\":5,\n",
+    "    \"patience\": 50,\n",
     "    \"fc_width\":200,\n",
     "    \"fc_layers\": 1,\n",
-    "    \"modelType\":\"blackbox\",\n",
+    "    \"modelType\":\"BB\",\n",
     "    \"lambda\": 0.6,\n",
     "    \"unsupervisedOnTest\": False,\n",
     "    \"tl_model\": \"ResNet18\", # Keep 'ResNet18', 'ResNet50', 'CIFAR', 'NIN'\n",
-    "    \"augmented\": True\n",
+    "    \n",
+    "    \"augmented\": True,\n",
+    "    \"weight_decay\": 0.0001,\n",
+    "\n",
+    "    \"img_res\": 448,\n",
+    "    \"tl_freeze\": True,\n",
+    "    \"cnn_layers\":0,\n",
+    "    \"cnn_channels\":128,\n",
+    "    \n",
+    "    \"pretrained\": True\n",
     "}\n",
     "\n",
     "experimentsPath=\"/home/elhamod/HGNN/experiments/\"\n",
@@ -74,7 +90,7 @@
     {
      "data": {
       "text/plain": [
-       "'/home/elhamod/melhamodenv3/BGNN/testingNewConfigFile2-0x5edef9b1/params.json'"
+       "'/home/elhamod/HGNN/experiments/Pretrain_Freeze/params.json'"
       ]
      },
      "execution_count": 3,
@@ -83,7 +99,7 @@
     }
    ],
    "source": [
-    "cp = ConfigParser(experimentName)\n",
+    "cp = ConfigParser(experimentsPath, dataPath, experimentName)\n",
     "\n",
     "selected_hyperp_params = [\n",
     "#     {\"training_count\":0.32,\"validation_count\":0.08,},\n",
@@ -94,9 +110,9 @@
     "#     {\"training_count\":0.64,\"validation_count\":0.16,'downsample': True, 'takeFromIntermediate': False, 'takeFromIntermediateOutput':-1 },\n",
     "#     {\"training_count\":0.64,\"validation_count\":0.16}\n",
     "    \n",
-    "    {\"patience\": 100, \"fc_layers\": 1 }, #size\n",
-    "    {\"patience\": 33, \"fc_layers\": 100 }, #size\n",
-    "    {\"patience\": 44, \"fc_layers\": 23 }, #size\n",
+    "    {\"pretrained\": True, \"tl_freeze\": False }, #size\n",
+    "    {\"pretrained\": True, \"tl_freeze\": True }, #size\n",
+    "    {\"pretrained\": False, \"tl_freeze\": False }, #size\n",
     "#     {'downsample': True, 'takeFromIntermediate': True, 'downsampleOutput':400, 'takeFromIntermediateOutput':400, \"fc_layers\": 2 }, #size\n",
     "#     {'downsample': True, 'takeFromIntermediate': True, 'downsampleOutput':200, 'takeFromIntermediateOutput':200, \"fc_layers\": 3 }, #size\n",
     "#     {'downsample': True, 'takeFromIntermediate': True, 'downsampleOutput':400, 'takeFromIntermediateOutput':400, \"fc_layers\": 3 }, #size\n",
@@ -126,9 +142,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'image_path': '/data/BGNN_data/INHS_cropped', 'suffix': '50', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 32, 'n_epochs': 5000, 'learning_rate': 0.01, 'numOfTrials': 3, 'patience': 100, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'blackbox', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18'}\n",
-      "{'image_path': '/data/BGNN_data/INHS_cropped', 'suffix': '50', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 32, 'n_epochs': 5000, 'learning_rate': 0.01, 'numOfTrials': 3, 'patience': 33, 'fc_width': 200, 'fc_layers': 100, 'modelType': 'blackbox', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18'}\n",
-      "{'image_path': '/data/BGNN_data/INHS_cropped', 'suffix': '50', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 32, 'n_epochs': 5000, 'learning_rate': 0.01, 'numOfTrials': 3, 'patience': 44, 'fc_width': 200, 'fc_layers': 23, 'modelType': 'blackbox', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18'}\n"
+      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 5, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': False, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True}\n",
+      "models/006017540c316d10c71f49dfc7bd7091de02a430d372d4d8e00eaa88\n",
+      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 5, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': True, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True}\n",
+      "models/817740e87e551175d5dca219d1b404f38a148b4933daee479fc33a01\n",
+      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 5, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': False, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': False}\n",
+      "models/99155e86c5bb7bf8ad39ea3c4ecbfcaa31b05955e9eb3f1fb0110952\n"
      ]
     }
    ],
@@ -155,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
