--- a/HGNN/train/Fix parameters.ipynb
+++ b/HGNN/train/Fix parameters.ipynb
@@ -59,7 +59,7 @@
     "\n",
     "# Keep same order as ConfigParserWriter!\n",
     "changes = {\n",
-    "    \"numOfTrials\": 5\n",
+    "    \"pretrained\": True\n",
     "}"
    ]
   },
@@ -107,7 +107,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "376c29bd53494509bf7be734a265d21e",
+       "model_id": "3c988cfb37654dc58a90132c9ab0f07e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -122,8 +122,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "datasplit datasplits/8abeaa923bd09bce60acac49f8d867e75f3c57d47370f417140df18a could not be fixed to datasplits/8abeaa923bd09bce60acac49f8d867e75f3c57d47370f417140df18a\n",
-      "datasplit datasplits/8abeaa923bd09bce60acac49f8d867e75f3c57d47370f417140df18a could not be fixed to datasplits/8abeaa923bd09bce60acac49f8d867e75f3c57d47370f417140df18a\n",
+      "datasplit /home/elhamod/HGNN/experiments/FreezeVsTune/datasplits/8abeaa923bd09bce60acac49f8d867e75f3c57d47370f417140df18a -> /home/elhamod/HGNN/experiments/FreezeVsTune/datasplits/8abeaa923bd09bce60acac49f8d867e75f3c57d47370f417140df18a updated\n",
+      "json /home/elhamod/HGNN/experiments/FreezeVsTune/datasplits/8abeaa923bd09bce60acac49f8d867e75f3c57d47370f417140df18a/params.json updated\n",
+      "datasplit /home/elhamod/HGNN/experiments/FreezeVsTune/datasplits/8abeaa923bd09bce60acac49f8d867e75f3c57d47370f417140df18a -> /home/elhamod/HGNN/experiments/FreezeVsTune/datasplits/8abeaa923bd09bce60acac49f8d867e75f3c57d47370f417140df18a updated\n",
+      "json /home/elhamod/HGNN/experiments/FreezeVsTune/datasplits/8abeaa923bd09bce60acac49f8d867e75f3c57d47370f417140df18a/params.json updated\n",
       "\n"
      ]
     }
@@ -185,7 +187,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c70fb9df7ca44e989a5ec4d8f4fe8d35",
+       "model_id": "a9d3dc8a4c934a9cb11e8efff700d431",
        "version_major": 2,
        "version_minor": 0
       },
@@ -199,7 +201,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7cdb232e801840eebbced2da9df626d6",
+       "model_id": "0309965d2bfa4042a080f6aa31b59a95",
        "version_major": 2,
        "version_minor": 0
       },
@@ -214,23 +216,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "model /home/elhamod/HGNN/experiments/FreezeVsTune/models/8fae45a05ce6694bacd44407373668385e44c9db5631acb8bdf5a698 -> /home/elhamod/HGNN/experiments/FreezeVsTune/models/8fae45a05ce6694bacd44407373668385e44c9db5631acb8bdf5a698 updated\n",
-      "json /home/elhamod/HGNN/experiments/FreezeVsTune/models/8fae45a05ce6694bacd44407373668385e44c9db5631acb8bdf5a698/params.json updated\n",
-      "model /home/elhamod/HGNN/experiments/FreezeVsTune/models/3fdef5ba2f52e82a736f0eae926f02363e557efcd0fa7dd2dce966ae -> /home/elhamod/HGNN/experiments/FreezeVsTune/models/3fdef5ba2f52e82a736f0eae926f02363e557efcd0fa7dd2dce966ae updated\n",
-      "json /home/elhamod/HGNN/experiments/FreezeVsTune/models/3fdef5ba2f52e82a736f0eae926f02363e557efcd0fa7dd2dce966ae/params.json updated\n",
-      "model /home/elhamod/HGNN/experiments/FreezeVsTune/models/9fba5b6d5bf04393a7ea39fd456096338098f147943bd1aa66982d25 -> /home/elhamod/HGNN/experiments/FreezeVsTune/models/9fba5b6d5bf04393a7ea39fd456096338098f147943bd1aa66982d25 updated\n",
-      "json /home/elhamod/HGNN/experiments/FreezeVsTune/models/9fba5b6d5bf04393a7ea39fd456096338098f147943bd1aa66982d25/params.json updated\n",
-      "model /home/elhamod/HGNN/experiments/FreezeVsTune/models/7761bb0425454f6523cdee932958381b8e706cd632f4ddd9dda30001 -> /home/elhamod/HGNN/experiments/FreezeVsTune/models/7761bb0425454f6523cdee932958381b8e706cd632f4ddd9dda30001 updated\n",
-      "json /home/elhamod/HGNN/experiments/FreezeVsTune/models/7761bb0425454f6523cdee932958381b8e706cd632f4ddd9dda30001/params.json updated\n",
-      "model /home/elhamod/HGNN/experiments/FreezeVsTune/models/0ac8ef08f232baf463b197b7fc76a3378d8e16c7ff1820158c867937 -> /home/elhamod/HGNN/experiments/FreezeVsTune/models/0ac8ef08f232baf463b197b7fc76a3378d8e16c7ff1820158c867937 updated\n",
-      "json /home/elhamod/HGNN/experiments/FreezeVsTune/models/0ac8ef08f232baf463b197b7fc76a3378d8e16c7ff1820158c867937/params.json updated\n",
+      "model /home/elhamod/HGNN/experiments/FreezeVsTune/models/8fae45a05ce6694bacd44407373668385e44c9db5631acb8bdf5a698 -> /home/elhamod/HGNN/experiments/FreezeVsTune/models/81c3c6cc1075c575546fe76f7aeacda22323240cfaa0cf8a6844213a updated\n",
+      "json /home/elhamod/HGNN/experiments/FreezeVsTune/models/81c3c6cc1075c575546fe76f7aeacda22323240cfaa0cf8a6844213a/params.json updated\n",
+      "model /home/elhamod/HGNN/experiments/FreezeVsTune/models/3fdef5ba2f52e82a736f0eae926f02363e557efcd0fa7dd2dce966ae -> /home/elhamod/HGNN/experiments/FreezeVsTune/models/6177220a591e721818e33d5cd83db02cd4e3b08973004183e6f9fc36 updated\n",
+      "json /home/elhamod/HGNN/experiments/FreezeVsTune/models/6177220a591e721818e33d5cd83db02cd4e3b08973004183e6f9fc36/params.json updated\n",
+      "model /home/elhamod/HGNN/experiments/FreezeVsTune/models/9fba5b6d5bf04393a7ea39fd456096338098f147943bd1aa66982d25 -> /home/elhamod/HGNN/experiments/FreezeVsTune/models/4b0623f87da8b7785982d959c934e8c8b4fb431771b1a4f61b1158e7 updated\n",
+      "json /home/elhamod/HGNN/experiments/FreezeVsTune/models/4b0623f87da8b7785982d959c934e8c8b4fb431771b1a4f61b1158e7/params.json updated\n",
+      "model /home/elhamod/HGNN/experiments/FreezeVsTune/models/7761bb0425454f6523cdee932958381b8e706cd632f4ddd9dda30001 -> /home/elhamod/HGNN/experiments/FreezeVsTune/models/a19810f1658f173d93fc107fc6d8b009ee67deaa2d60383beb8ee7d0 updated\n",
+      "json /home/elhamod/HGNN/experiments/FreezeVsTune/models/a19810f1658f173d93fc107fc6d8b009ee67deaa2d60383beb8ee7d0/params.json updated\n",
+      "model /home/elhamod/HGNN/experiments/FreezeVsTune/models/0ac8ef08f232baf463b197b7fc76a3378d8e16c7ff1820158c867937 -> /home/elhamod/HGNN/experiments/FreezeVsTune/models/069f340ec73d191c7ff96b836abef6541b0160fa537d2a662e49e78f updated\n",
+      "json /home/elhamod/HGNN/experiments/FreezeVsTune/models/069f340ec73d191c7ff96b836abef6541b0160fa537d2a662e49e78f/params.json updated\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f1040d8809ab494a84dbd56a48ae9bdb",
+       "model_id": "ef5011f96db144da9371b0e99a2bc078",
        "version_major": 2,
        "version_minor": 0
       },
@@ -245,16 +247,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "model /home/elhamod/HGNN/experiments/FreezeVsTune/models/21732080ae91025dd7678a0c34910ff99bd6ebe781a48abb050fd418 -> /home/elhamod/HGNN/experiments/FreezeVsTune/models/21732080ae91025dd7678a0c34910ff99bd6ebe781a48abb050fd418 updated\n",
-      "json /home/elhamod/HGNN/experiments/FreezeVsTune/models/21732080ae91025dd7678a0c34910ff99bd6ebe781a48abb050fd418/params.json updated\n",
-      "model /home/elhamod/HGNN/experiments/FreezeVsTune/models/f21a7bdcdd8620f78796e22ed744dea8df46b3ec98297daed3fedff4 -> /home/elhamod/HGNN/experiments/FreezeVsTune/models/f21a7bdcdd8620f78796e22ed744dea8df46b3ec98297daed3fedff4 updated\n",
-      "json /home/elhamod/HGNN/experiments/FreezeVsTune/models/f21a7bdcdd8620f78796e22ed744dea8df46b3ec98297daed3fedff4/params.json updated\n",
-      "model /home/elhamod/HGNN/experiments/FreezeVsTune/models/5b7515330237c2852d135f2ce663ae870eca9e163fdcc7b273d41757 -> /home/elhamod/HGNN/experiments/FreezeVsTune/models/5b7515330237c2852d135f2ce663ae870eca9e163fdcc7b273d41757 updated\n",
-      "json /home/elhamod/HGNN/experiments/FreezeVsTune/models/5b7515330237c2852d135f2ce663ae870eca9e163fdcc7b273d41757/params.json updated\n",
-      "model /home/elhamod/HGNN/experiments/FreezeVsTune/models/50ec050432a5d682ee0df329034c0d1f9bc6329e1f105d70f6834b30 -> /home/elhamod/HGNN/experiments/FreezeVsTune/models/50ec050432a5d682ee0df329034c0d1f9bc6329e1f105d70f6834b30 updated\n",
-      "json /home/elhamod/HGNN/experiments/FreezeVsTune/models/50ec050432a5d682ee0df329034c0d1f9bc6329e1f105d70f6834b30/params.json updated\n",
-      "model /home/elhamod/HGNN/experiments/FreezeVsTune/models/1533bedb096e38cd6daf05b062b368f5c547cff4c97be6f9002d9798 -> /home/elhamod/HGNN/experiments/FreezeVsTune/models/1533bedb096e38cd6daf05b062b368f5c547cff4c97be6f9002d9798 updated\n",
-      "json /home/elhamod/HGNN/experiments/FreezeVsTune/models/1533bedb096e38cd6daf05b062b368f5c547cff4c97be6f9002d9798/params.json updated\n",
+      "model /home/elhamod/HGNN/experiments/FreezeVsTune/models/21732080ae91025dd7678a0c34910ff99bd6ebe781a48abb050fd418 -> /home/elhamod/HGNN/experiments/FreezeVsTune/models/ae099c4c81fbe1f0f99e7875fbe3940547a60e2e821fc1cba445ad59 updated\n",
+      "json /home/elhamod/HGNN/experiments/FreezeVsTune/models/ae099c4c81fbe1f0f99e7875fbe3940547a60e2e821fc1cba445ad59/params.json updated\n",
+      "model /home/elhamod/HGNN/experiments/FreezeVsTune/models/f21a7bdcdd8620f78796e22ed744dea8df46b3ec98297daed3fedff4 -> /home/elhamod/HGNN/experiments/FreezeVsTune/models/461bf46865f407e9d202586fb42da49b8271b1cf9c17281213e1ff9f updated\n",
+      "json /home/elhamod/HGNN/experiments/FreezeVsTune/models/461bf46865f407e9d202586fb42da49b8271b1cf9c17281213e1ff9f/params.json updated\n",
+      "model /home/elhamod/HGNN/experiments/FreezeVsTune/models/5b7515330237c2852d135f2ce663ae870eca9e163fdcc7b273d41757 -> /home/elhamod/HGNN/experiments/FreezeVsTune/models/770aabe841589bb2d7ef27826f44971a770539917cf0cb9968eeed84 updated\n",
+      "json /home/elhamod/HGNN/experiments/FreezeVsTune/models/770aabe841589bb2d7ef27826f44971a770539917cf0cb9968eeed84/params.json updated\n",
+      "model /home/elhamod/HGNN/experiments/FreezeVsTune/models/50ec050432a5d682ee0df329034c0d1f9bc6329e1f105d70f6834b30 -> /home/elhamod/HGNN/experiments/FreezeVsTune/models/433a5b71147a444f668dfd14b7f19746aba28388f77d771965749ec7 updated\n",
+      "json /home/elhamod/HGNN/experiments/FreezeVsTune/models/433a5b71147a444f668dfd14b7f19746aba28388f77d771965749ec7/params.json updated\n",
+      "model /home/elhamod/HGNN/experiments/FreezeVsTune/models/1533bedb096e38cd6daf05b062b368f5c547cff4c97be6f9002d9798 -> /home/elhamod/HGNN/experiments/FreezeVsTune/models/9b4500db93c989d56ac441dd54a6dcdcec3226f227af529608b76356 updated\n",
+      "json /home/elhamod/HGNN/experiments/FreezeVsTune/models/9b4500db93c989d56ac441dd54a6dcdcec3226f227af529608b76356/params.json updated\n",
       "\n",
       "\n"
      ]
@@ -319,7 +321,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2f5bfef148e044f39e9ff8abca88ebdc",
+       "model_id": "cbdb0a4585cd434380f396ec944cbb44",
        "version_major": 2,
        "version_minor": 0
       },
@@ -334,10 +336,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "result /home/elhamod/HGNN/experiments/FreezeVsTune/results/d6873ee3953c93b89c9092ab603ce1dc8242e83b8495fd63007b1cc9 -> /home/elhamod/HGNN/experiments/FreezeVsTune/results/d6873ee3953c93b89c9092ab603ce1dc8242e83b8495fd63007b1cc9 updated\n",
-      "json /home/elhamod/HGNN/experiments/FreezeVsTune/results/d6873ee3953c93b89c9092ab603ce1dc8242e83b8495fd63007b1cc9/params.json updated\n",
-      "result /home/elhamod/HGNN/experiments/FreezeVsTune/results/1e1fb23ee91b9ce31e8f09e5635e8950c1fe5ba74983b13f7d6483bc -> /home/elhamod/HGNN/experiments/FreezeVsTune/results/1e1fb23ee91b9ce31e8f09e5635e8950c1fe5ba74983b13f7d6483bc updated\n",
-      "json /home/elhamod/HGNN/experiments/FreezeVsTune/results/1e1fb23ee91b9ce31e8f09e5635e8950c1fe5ba74983b13f7d6483bc/params.json updated\n",
+      "result /home/elhamod/HGNN/experiments/FreezeVsTune/results/d6873ee3953c93b89c9092ab603ce1dc8242e83b8495fd63007b1cc9 -> /home/elhamod/HGNN/experiments/FreezeVsTune/results/006017540c316d10c71f49dfc7bd7091de02a430d372d4d8e00eaa88 updated\n",
+      "json /home/elhamod/HGNN/experiments/FreezeVsTune/results/006017540c316d10c71f49dfc7bd7091de02a430d372d4d8e00eaa88/params.json updated\n",
+      "result /home/elhamod/HGNN/experiments/FreezeVsTune/results/1e1fb23ee91b9ce31e8f09e5635e8950c1fe5ba74983b13f7d6483bc -> /home/elhamod/HGNN/experiments/FreezeVsTune/results/817740e87e551175d5dca219d1b404f38a148b4933daee479fc33a01 updated\n",
+      "json /home/elhamod/HGNN/experiments/FreezeVsTune/results/817740e87e551175d5dca219d1b404f38a148b4933daee479fc33a01/params.json updated\n",
       "\n"
      ]
     }
@@ -393,7 +395,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0fcf9190224b4e728f89bc3ec6435193",
+       "model_id": "14a5b3d740104c3baf7155c68008cead",
        "version_major": 2,
        "version_minor": 0
       },
@@ -407,7 +409,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b56d77c6bf674a5688e9b6fe55aa12f5",
+       "model_id": "320e35f095d54555a1004732e809563d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -422,11 +424,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "trialHash 8fae45a05ce6694bacd44407373668385e44c9db5631acb8bdf5a698 -> 8fae45a05ce6694bacd44407373668385e44c9db5631acb8bdf5a698 updated\n",
-      "trialHash 3fdef5ba2f52e82a736f0eae926f02363e557efcd0fa7dd2dce966ae -> 3fdef5ba2f52e82a736f0eae926f02363e557efcd0fa7dd2dce966ae updated\n",
-      "trialHash 9fba5b6d5bf04393a7ea39fd456096338098f147943bd1aa66982d25 -> 9fba5b6d5bf04393a7ea39fd456096338098f147943bd1aa66982d25 updated\n",
-      "trialHash 7761bb0425454f6523cdee932958381b8e706cd632f4ddd9dda30001 -> 7761bb0425454f6523cdee932958381b8e706cd632f4ddd9dda30001 updated\n",
-      "trialHash 0ac8ef08f232baf463b197b7fc76a3378d8e16c7ff1820158c867937 -> 0ac8ef08f232baf463b197b7fc76a3378d8e16c7ff1820158c867937 updated\n",
+      "trialHash 8fae45a05ce6694bacd44407373668385e44c9db5631acb8bdf5a698 -> 81c3c6cc1075c575546fe76f7aeacda22323240cfaa0cf8a6844213a updated\n",
+      "trialHash 3fdef5ba2f52e82a736f0eae926f02363e557efcd0fa7dd2dce966ae -> 6177220a591e721818e33d5cd83db02cd4e3b08973004183e6f9fc36 updated\n",
+      "trialHash 9fba5b6d5bf04393a7ea39fd456096338098f147943bd1aa66982d25 -> 4b0623f87da8b7785982d959c934e8c8b4fb431771b1a4f61b1158e7 updated\n",
+      "trialHash 7761bb0425454f6523cdee932958381b8e706cd632f4ddd9dda30001 -> a19810f1658f173d93fc107fc6d8b009ee67deaa2d60383beb8ee7d0 updated\n",
+      "trialHash 0ac8ef08f232baf463b197b7fc76a3378d8e16c7ff1820158c867937 -> 069f340ec73d191c7ff96b836abef6541b0160fa537d2a662e49e78f updated\n",
       "\n"
      ]
     },
@@ -442,7 +444,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1a194ed792de4eb2950ef242c0b57c7a",
+       "model_id": "014b7e4ff7034488a2256accca649146",
        "version_major": 2,
        "version_minor": 0
       },
@@ -457,11 +459,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "trialHash 21732080ae91025dd7678a0c34910ff99bd6ebe781a48abb050fd418 -> 21732080ae91025dd7678a0c34910ff99bd6ebe781a48abb050fd418 updated\n",
-      "trialHash f21a7bdcdd8620f78796e22ed744dea8df46b3ec98297daed3fedff4 -> f21a7bdcdd8620f78796e22ed744dea8df46b3ec98297daed3fedff4 updated\n",
-      "trialHash 5b7515330237c2852d135f2ce663ae870eca9e163fdcc7b273d41757 -> 5b7515330237c2852d135f2ce663ae870eca9e163fdcc7b273d41757 updated\n",
-      "trialHash 50ec050432a5d682ee0df329034c0d1f9bc6329e1f105d70f6834b30 -> 50ec050432a5d682ee0df329034c0d1f9bc6329e1f105d70f6834b30 updated\n",
-      "trialHash 1533bedb096e38cd6daf05b062b368f5c547cff4c97be6f9002d9798 -> 1533bedb096e38cd6daf05b062b368f5c547cff4c97be6f9002d9798 updated\n",
+      "trialHash 21732080ae91025dd7678a0c34910ff99bd6ebe781a48abb050fd418 -> ae099c4c81fbe1f0f99e7875fbe3940547a60e2e821fc1cba445ad59 updated\n",
+      "trialHash f21a7bdcdd8620f78796e22ed744dea8df46b3ec98297daed3fedff4 -> 461bf46865f407e9d202586fb42da49b8271b1cf9c17281213e1ff9f updated\n",
+      "trialHash 5b7515330237c2852d135f2ce663ae870eca9e163fdcc7b273d41757 -> 770aabe841589bb2d7ef27826f44971a770539917cf0cb9968eeed84 updated\n",
+      "trialHash 50ec050432a5d682ee0df329034c0d1f9bc6329e1f105d70f6834b30 -> 433a5b71147a444f668dfd14b7f19746aba28388f77d771965749ec7 updated\n",
+      "trialHash 1533bedb096e38cd6daf05b062b368f5c547cff4c97be6f9002d9798 -> 9b4500db93c989d56ac441dd54a6dcdcec3226f227af529608b76356 updated\n",
       "\n",
       "\n"
      ]
@@ -536,7 +538,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "906d76c932f64a46968797cc18639bf9",
+       "model_id": "8a6c7a89992e44f48919a38d892a19e1",
        "version_major": 2,
        "version_minor": 0
       },
