CNN_TwoNets spoeeding up augmentation by removing glob adding dataset normalization option misc fixes

--- a/HGNN/train/ConfigParserWriter-GridExperiments.ipynb
+++ b/HGNN/train/ConfigParserWriter-GridExperiments.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimentName = \"differetnRes\"\n",
+    "experimentName = \"Testing_model_cases_TwoNets\"\n",
     "\n",
     "\n",
     "# When adding a new parameter:\n",
@@ -48,14 +48,14 @@
     "    \"validation_count\":0.16,\n",
     "\n",
     "    # training\n",
-    "    \"batchSize\": 64, # Bigger is more stable\n",
+    "    \"batchSize\": 128, # Bigger is more stable\n",
     "    \"n_epochs\":5000, # allow it to run for long time 4000\n",
     "    \"learning_rate\":0.001, # Seems 0.0001 to be best value with Adam. 0.1 best for SGD\n",
-    "    \"numOfTrials\":5,\n",
+    "    \"numOfTrials\":1,\n",
     "    \"patience\": 50,\n",
     "    \"fc_width\":200,\n",
     "    \"fc_layers\": 1,\n",
-    "    \"modelType\":\"BB\",\n",
+    "    \"modelType\":\"HGNN\",\n",
     "    \"lambda\": 0.6,\n",
     "    \"unsupervisedOnTest\": False,\n",
     "    \"tl_model\": \"ResNet18\", # Keep 'ResNet18', 'ResNet50', 'CIFAR', 'NIN'\n",
@@ -64,11 +64,14 @@
     "    \"weight_decay\": 0.0001,\n",
     "\n",
     "    \"img_res\": 448,\n",
-    "    \"tl_freeze\": True,\n",
-    "    \"cnn_layers\":0,\n",
-    "    \"cnn_channels\":128,\n",
+    "    \"tl_freeze\": False, # False -> Fine tuning\n",
+    "    \"cnn_layers\":0, # Not used. Don't change. TODO: deprecate\n",
+    "    \"cnn_channels\":128, # Not used. Don't change. TODO: deprecate\n",
     "    \n",
-    "    \"pretrained\": True\n",
+    "    \"pretrained\": True,\n",
+    "    \"two_nets\": True, # True uses CNN_Two_Nets. Otherwise, uses CNN_hierarchy\n",
+    "    \"link_layer\": \"layer4\", # layer name should be consistent with tl_model layer names\n",
+    "    \"dataset_norm\": True # False: Uses pretrained norm. True: calculates norm from dataset\n",
     "}\n",
     "\n",
     "experimentsPath=\"/home/elhamod/HGNN/experiments/\"\n",
@@ -90,7 +93,7 @@
     {
      "data": {
       "text/plain": [
-       "'/home/elhamod/HGNN/experiments/differetnRes/params.json'"
+       "'/home/elhamod/HGNN/experiments/Testing_model_cases_TwoNets/params.json'"
       ]
      },
      "execution_count": 3,
@@ -102,7 +105,7 @@
     "cp = ConfigParser(experimentsPath, dataPath, experimentName)\n",
     "\n",
     "hyperp_params = {\n",
-    "    \"img_res\":[224, 448, 896]\n",
+    "    \"modelType\":[\"BB\",\"HGNN\",\"DISCO\",\"DSN\"]\n",
     "#     \"dummy\":[0]\n",
     "#     \"fc_layers\":[1,2,3],\n",
     "    \n",
@@ -132,12 +135,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 64, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 5, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 224, 'tl_freeze': True, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True}\n",
-      "models/754165dd61cd98f0a13a94b2b961168d7af952a89e2817c28cd67156\n",
-      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 64, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 5, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': True, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True}\n",
-      "models/5dc8a5a13ac397af20c7f51ad8df9fb52e21718645de773a9b30ef12\n",
-      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 64, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 5, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 896, 'tl_freeze': True, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True}\n",
-      "models/0fba78bbf65d7c025b1ea1a645a9a0d5f2f4a1a6de341c6721258a86\n"
+      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 1, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': False, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True, 'two_nets': True, 'link_layer': 'layer4', 'dataset_norm': True}\n",
+      "models/63a392166a3f9b66288aceff94e5f91cced2b509b8883ce6e5bc41ac\n",
+      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 1, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'HGNN', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': False, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True, 'two_nets': True, 'link_layer': 'layer4', 'dataset_norm': True}\n",
+      "models/a24e231d7959ea0c9b85bc1aa5b22bf8a6e9559f9933b9d943cc9bc9\n",
+      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 1, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'DISCO', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': False, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True, 'two_nets': True, 'link_layer': 'layer4', 'dataset_norm': True}\n",
+      "models/7e76f1d1861d1c74418a7c3f065b0f39b80a4858ad01895775649903\n",
+      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 1, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'DSN', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': False, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True, 'two_nets': True, 'link_layer': 'layer4', 'dataset_norm': True}\n",
+      "models/712c0fc25a7e2de3b68539093e04e0d8bfca87d9fd14b933f7b0f1aa\n"
      ]
     }
    ],
